Fixed navbar collapse and added transparency for navbar

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ footer {
       -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
               box-shadow: 0 2px 10px rgba(0,0,0,.25);
+      background: rgba(0,0,0,0.7);
     }
 
     /* Downsize the brand/project name a bit */
@@ -92,8 +93,12 @@ footer {
 
 
     /* Offset the responsive button for proper vertical alignment */
-    .navbar .btn-navbar {
-      margin-top: 10px;
+
+    .navbar-inverse .nav .active>a, 
+    .navbar-inverse .nav .active>a:hover,
+    .navbar-inverse .nav .active>a:focus {
+      padding-bottom: 25px;
+
     }
 
 
@@ -323,12 +328,18 @@ footer {
         margin-top: 100px;
         margin-right: 100px;
       }
+      .navbar .navbar-inner {
+        background-color: #000;
+      }
 
   }
 @media (max-width: 979px){
     .brand p {
         margin-top: 16px;
         margin-left: 15px;
+      }
+    .navbar .navbar-inner {
+        background-color: #000;
       }
 }
     
